# lxc

./: Cargo.toml  README.md  codegen.lx  example.lx  object_module.lx  stmts.lx  test.lx
src/: ast.rs  cli.rs  code_gen.rs  lexer.rs  main.rs  parser.rs  ptree.rs  ssa.rs  style.rs
src/ast/: from_ptree.rs
src/ptree/: pretty_print.rs
src/ssa/: const_eval.rs  dead_code_elim.rs  lookup.rs  lowering.rs  prelude.rs  pretty_print.rs  type_checking.rs
