[package]
name = "lxc"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.50", features = ["derive"] }
logos = "0.15.1"
colored = "3.0.0"
indexmap = "2.12.0"
thiserror = "2.0.17"
cranelift-module = "0.125.4"
cranelift-object = "0.125.4"
cranelift-codegen = "0.125.4"
cranelift-frontend = "0.125.4"
cranelift-native = "0.125.4"
